@@ -1,6 +1,11 @@
 # ChangeLog for media-fonts/mplus-outline-fonts
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-fonts/mplus-outline-fonts/ChangeLog,v 1.38 2013/05/23 14:15:22 hattya Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-fonts/mplus-outline-fonts/ChangeLog,v 1.39 2013/05/23 14:23:19 hattya Exp $
+
+  23 May 2013; Akinori Hattori <hattya@gentoo.org>
+  -mplus-outline-fonts-0_pre040.ebuild, -mplus-outline-fonts-0_pre043-r1.ebuild,
+  -mplus-outline-fonts-0_pre043.ebuild, -mplus-outline-fonts-0_pre046.ebuild:
+  remove old ebuilds
 
 *mplus-outline-fonts-0_pre055 (23 May 2013)
 
